201015TIL, about, tistory 추가

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ title: julia98percent@github.io
 author: julia98percent
 email: ji_0315@naver.com
 description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  오늘 배운걸 오래 기억하기 위해서 적는 블로그!
 show_excerpts: true # set to true to show excerpts on the homepage
 
 # Minima date format
@@ -14,43 +12,31 @@ sass:
 plainwhite:
   name: Julie
   tagline: Today I Learned
-  date_format: "%b %-d, %Y"
+  date_format: "%Y %m %-d"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
   dark_mode: true # set to true to add dark mode toggle
   portfolio_image: "assets/portfolio.png" # the path from the base directory of the site to the image to display (no / at the start)
   html_lang: "utf-8" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
+  
+  navigation:
+    - title: tistory
+      url: "https://bsscl.tistory.com/"
+    - title: about
+      url: "/about"
+
   condensed_mobile:
     #- home
     - page
     - post
   # generate social links in footer
   social_links:
-    #twitter: 
     github:  julia98percent
-    #linkedIn: in/samarsault
-    #rss: rss
-    #dribbble: jekyll
-    #flickr:   jekyll
-    #instagram: jekyll
-    #pinterest: jekyll
-    #youtube: jekyll
-    #facebook: jekyll
-    #soundcloud: jekyll
-    #telegram: jekyll
-    #gitlab: jekyll
-
-    # Mastodon instances
-    # mastodon:
-    # - username: jekyll
-    #   instance: example.com
-    # - username: jekyll2
-    #   instance: example.com
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
-#header_pages:
-# - about.md
+# header_pages:
+#  - index.md
 
 # Build settings
 theme: plainwhite
