[0723-1554] 맥 os 지원 안하는 플러그인 제거 및 디펜던시 최소화해서 초기 설정 다시 세팅

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-*.gem
-.bundle
-.sass-cache
-_site
-Gemfile.lock
-.DS_Store
-vendor
-.jekyll-cache
-tags
+node_modules/
+.cache/
+public
+src/gatsby-types.d.ts
