[0204-2346] gatsby에서 scss 모듈 사용할수 있도록 기초 설정

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "gatsby": "^5.4.0",
+    "gatsby-plugin-sass": "^6.6.0",
     "gatsby-source-filesystem": "^5.5.0",
     "gatsby-transformer-remark": "^6.5.0",
     "gatsby-transformer-yaml": "^5.5.0",
