--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "dependencies": {
     "gatsby": "^5.4.0",
+    "gatsby-plugin-image": "^3.6.0",
     "gatsby-plugin-sass": "^6.6.0",
-    "gatsby-source-filesystem": "^5.5.0",
+    "gatsby-plugin-sharp": "^5.6.0",
+    "gatsby-source-filesystem": "^5.6.0",
     "gatsby-transformer-remark": "^6.5.0",
+    "gatsby-transformer-sharp": "^5.6.0",
     "gatsby-transformer-yaml": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
